# product-hub

./: ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION.md  PLATFORM_SUPPORT.md  QUICK_REFERENCE.md  README.md  UI_REFERENCE.md  pyproject.toml  test_setup.py
src/product_hub/: device_monitor.py
src/product_hub/templates/: index.html
